add cors options to all the methods
